Add tests, enable CI

--- a/vcpkg-configuration.json
+++ b/vcpkg-configuration.json
@@ -3,6 +3,7 @@
     {
       "kind": "git",
       "repository": "https://github.com/mbeckh/vcpkg-registry.git",
+      "baseline": "84223b07471253132d80f268b6014f0044bcc69f",
       "packages": [ "detours", "detours-gmock", "gtest" ]
     }
   ]
