Fix missing analyze step

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,6 +53,11 @@ jobs:
         codecov: true
         codacy-token: ${{secrets.CODACY_PROJECT_API_TOKEN}}
 
+    - name: Analyze
+      shell: cmd
+      working-directory: build/${{matrix.configuration}}
+      run: cmake --build . --target clang-tidy
+
     - name: Report
       uses: mbeckh/code-quality-actions/report@master
       with:
