Skip detect_compiler log

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,6 +72,7 @@ jobs:
         name: ${{matrix.configuration}}-Logs
         path: |
             build/**/vcpkg-buildtrees/*/*.log
+            !build/**/vcpkg-buildtrees/detect_compiler
             build/${{matrix.configuration}}/Testing/**/*.log
             build/${{matrix.configuration}}/clang-tidy-*.log
 
