--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -39,6 +39,7 @@ jobs:
         build-root: build
         binary-dir: build/Release
         configuration: Release
+        extra-args: -D CMAKE_DISABLE_PRECOMPILE_HEADERS:BOOL=ON
 
     - name: Initialize CodeQL
       if: github.event_name != 'pull_request'
