--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: build
+name: Build
 
 on:
   push:
@@ -8,5 +8,5 @@ on:
 
 jobs:
   build:
-    uses: mbeckh/cmake-utils/.github/workflows/build.yml@feature-workflow
+    uses: mbeckh/cmake-utils/.github/workflows/run-build.yml@feature-workflow
     secrets: inherit
