--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,5 +8,5 @@ on:
 
 jobs:
   build:
-    uses: mbeckh/cmake-utils/.github/workflows/run-build.yml@feature-workflow
+    uses: mbeckh/cmake-utils/.github/workflows/run-build.yml@v1
     secrets: inherit
