Update dependencies and build job

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,17 @@ on:
   pull_request:
     branches: [ master ]
 
+permissions: {}
+
 jobs:
   build:
+    name: Build
     uses: mbeckh/cmake-utils/.github/workflows/run-build.yml@v1
+    with:
+      unity: false
+      pch: false
     secrets: inherit
+    permissions:
+      actions: write
+      contents: read
+      packages: write
