--- a/.editorconfig
+++ b/.editorconfig
@@ -2,32 +2,37 @@ root=true
 
 [*]
 indent_style=tab
-tab_width=4
+indent_size=4
 charset=utf-8
 trim_trailing_whitespace=true
 insert_final_newline=true
 guidelines=80
 
+[{*.cmake,*.cmake.in,CMakeLists.txt}]
+indent_style=space
+guidelines=80,120
+
 [*.{cpp,h}]
 guidelines=80,120
 
-[{*.cmake,CMakeLists.txt}]
+[*.js]
 indent_style=space
+indent_size=2
 guidelines=80,120
 
-[*.json]
+[*.{json,json.template}]
 indent_style=space
-tab_width=2
+indent_size=2
 
 [*.md]
 indent_style=space
-tab_width=2
+indent_size=2
 trim_trailing_whitespace=false
 guidelines=120
 
 [*.{xml,man}]
-tab_width=2
+indent_size=2
 
 [{*.yml,.clang-format,.clang-tidy}]
 indent_style=space
-tab_width=2
+indent_size=2
